--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css">
+    <link rel="stylesheet" href="https://cdn.tailwindcss.com/3.0.12">
+    <link rel="stylesheet" href="https://unpkg.com/react@18/umd/react.development.js">
+    <link rel="stylesheet" href="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
+    <link rel="stylesheet" href="https://unpkg.com/@babel/standalone/babel.min.js">
     <title>Vite + React</title>
   </head>
   <body>
